--- a/ClientSide/about/about.html
+++ b/ClientSide/about/about.html
@@ -8,10 +8,22 @@
 <script src="loginController.js"></script>
 <div>
 <!--    <button ng-click="myFunc()">return home</button>-->
-    <p>Hello!<br>
+    <h2>Hello!<br>
         This is the best website for you, traveller, to find the best attractions you have ever dreamed of, here in Beersheba.
-    </p>
+    </h2>
 </div>
+<div>
+    Beersheba is the largest city in the Negev desert of southern Israel. Often referred to as the "Capital of the Negev",<br> it is the center of the fourth most populous metropolitan area in Israel, the eighth most populous Israeli city with a population of 207,551 and the second largest city with a total area of 117,500 dunams (after Jerusalem).
+    <p><img src="Images/BS1.JPG" style="width:750px ; height:750px ; margin-left:10px;">
+</div>
+
+<div>
+<p>Night falls over Beersheba’s city center, which is<br> quickly becoming a hi-tech hub for Israel</p>
+<p><img src="Images/BS.JPG" style="width:750px ; height:750px ; margin-left:10px;">
+
+
+</div>
+
 
 </body>
 </html>
