--- a/ClientSide/Register/Register.html
+++ b/ClientSide/Register/Register.html
@@ -27,7 +27,9 @@
             <option value="">{{q2.que_description}}
             <option value="">{{q3.que_description}}
         </select>
-        <input type="text" name="answers" ng-model="answers" placeholder="answer" ><br>
+        <input type="text" name="answers" ng-model="answers" placeholder="answer" >
+
+
 
         <input ng-disabled="RegisterForm.$invalid" type="submit" id="submit" value="Submit" ng-click="register()">
     </form>
