--- a/ClientSide/favorites/favorites.html
+++ b/ClientSide/favorites/favorites.html
@@ -1,12 +1,25 @@
 <h1>your saved points of interest!</h1>
-<!--<input type="text" name="poiname" ng-model="poiname" placeholder="enter POI name" required >-->
-<!--<Button type="submit" id="searchpoi" ng-click="search()">search</Button>-->
-<!--<br>-->
-<!--<input type="checkbox" ng-model="cat1filter" ng-click="getPoi1()">Culture<br>-->
-<!--<input type="checkbox" ng-model="cat2filter" ng-click="getPoi2()">Food<br>-->
-<!--<input type="checkbox" ng-model="cat3filter" ng-click="getPoi3()">Nightlife<br>-->
-<!--<input type="checkbox" ng-model="cat4filter" ng-click="getPoi4()">Shopping<br>-->
+<!--<div class = "counter" ng-init = showFavoritesNumber()>-->
+<!--move number of favorites to top: {{counter}}-->
+<!--</div>-->
 
-<!--<ng-model> = "requestedPOIname"-->
-<!--<ng-model> = "requestedPOIpicture"-->
+<div class = "favorites" ng-init = "showAllFavorites()">
+    <ul>
+        <li ng-repeat="x in result">
+            {{ x.name }}
+            <br>
+            <img ng-src = "{{x.Picture}}" height="100px" width="100px">
 
+        </li>
+
+    </ul>
+</div>
+
+
+<div>
+    <select id="sortBy" ng-model="sortBy" >
+        <option> Rating </option>
+        <option> Category </option>
+    </select>
+    <input type="submit" id="submit" value="Submit" ng-click="sort()">
+</div>
