--- a/ClientSide/favorites/favorites.html
+++ b/ClientSide/favorites/favorites.html
@@ -1,7 +1,7 @@
 <h1>your saved points of interest!</h1>
-<!--<div class = "counter" ng-init = showFavoritesNumber()>-->
-<!--move number of favorites to top: {{counter}}-->
-<!--</div>-->
+<div class = "counter" ng-init = showFavoritesNumber()>
+move number of favorites to top: {{counter}}
+</div>
 
 <div class = "favorites" ng-init = "showAllFavorites()">
     <ul>
