--- a/ClientSide/Register/Register.html
+++ b/ClientSide/Register/Register.html
@@ -32,8 +32,7 @@
             <option value="">{{q2.que_description}}
             <option value="">{{q3.que_description}}
         </select>
-        <input type="text" name="answers" ng-model="answers" placeholder="answer" >
-
+        <input type="text" name="answers1" ng-model="answers1" placeholder="answer" >
 
 
 
