--- a/ClientSide/POI/POIs.html
+++ b/ClientSide/POI/POIs.html
@@ -7,7 +7,63 @@
 <input type="checkbox" ng-model="cat3filter" ng-click="getPoi3()">Nightlife<br>
 <input type="checkbox" ng-model="cat4filter" ng-click="getPoi4()">Shopping<br>
 
-<!--<ng-model> = "requestedPOIname"-->
+<div ng-hide="cat1filter">
+    <div ng-hide="cat2filter">
+        <div ng-hide="cat3filter">
+            <div ng-hide="cat4filter">
+
+        <div ng-init="getPoi1()">
+
+
+    <h3>Culture</h3>
+    <ul>
+        <li ng-repeat="x in listOfPOIs1">
+            {{ x.name }}
+            <br>
+            <img ng-src = "{{x.Picture}}" height="100px" width="100px">
+
+        </li>
+
+    </ul>
+
+</div>
+<div  ng-init="getPoi2()">
+    <h3>Food</h3>
+    <ul>
+        <li ng-repeat="x in listOfPOIs2">
+            {{ x.name }}
+            <br>
+            <img ng-src = "{{x.Picture}}" height="100px" width="100px">
+        </li>
+    </ul>
+</div>
+<div  ng-init="getPoi3()">
+    <h3>Nightlife</h3>
+    <ul>
+        <li ng-repeat="x in listOfPOIs3">
+            {{ x.name }}
+            <br>
+            <img ng-src = "{{x.Picture}}" height="100px" width="100px">
+        </li>
+    </ul>
+</div>
+<div  ng-init="getPoi4()">
+    <h3>Shopping</h3>
+    <ul>
+        <li ng-repeat="x in listOfPOIs4">
+            {{ x.name }}
+            <br>
+            <img ng-src = "{{x.Picture}}" height="100px" width="100px">
+        </li>
+    </ul>
+</div>
+</div>
+</div>
+    </div>
+</div>
+
+
+    <!--<ng-model> = "requestedPOIname"-->
 <!--<ng-model> = "requestedPOIpicture"-->
 <div ng-show="cat1filter" ng-click="getPoi1()">
     <h3>Culture</h3>
